2015-12-28	For great random.

		include/biting-pear/rly.h ,
		include/biting-pear/srsly.h :
		- initial version

		include/biting-pear/yarly.h :
		- fixed really, really silly operator precedence bug
		- fixed really, really silly modulo bug

		util/biting-pear-doge.ccc :
		- now uses srsly.h

		GNUmakefile :
		- added rly.h and srsly.h as header dependencies

2015-12-26	And now for something remotely different.

		util/biting-pear-doge.ccc :
		- initial draft

		GNUmakefile :
		- now builds util/biting-pear-doge

		configure :
		- now probes for GNU BFD library

		include/biting-pear/dawg.h :
		- biting_pear::dawg_impl<...> now has default and copy
		  constructors
		- reduced template recursion levels, to make compilation
		  tractable

		lolwutconf/c++.inc :
		- added conf_cxx_probe_lib()

		.gitignore :
		- updated

2015-12-13	Syntactic sugar for strings.

		helper/postpreproc.lxx :
		- renamed from helper/postpreproc-2.lxx
		- added $"..." and $L"..."

		GNUmakefile :
		- added test cases for $"..." and $L"..."
		- now automatically invokes ./configure if config.cache
		  is absent
		- now builds helper/postpreproc and not helper/postpreproc-2

		test/test-extra-3.ccc ,
		test/test-extra-3.good ,
		test/test-extra-4.ccc ,
		test/test-extra-4.good :
		- initial version

		.gitignore :
		- updated

2015-11-24	getpid() and getppid().

		include/biting-pear/omg.h :
		- now makes bogus calls to getpid() and getppid() if signal-
		  -safe calls are allowed

		test/test-1.ccc ,
		test/test-2.ccc :
		- added allow_all tests

2015-09-27	Minor improvement.

		GNUmakefile :
		- now makes $(config.h) define `biting_pear_decltype'

		configure ,
		lolwutconf/c++.inc :
		- now checks for `decltype' support

		include/biting-pear/dawg.h ,
		include/biting-pear/omg.h ,
		test/test-2.ccc :
		- switched from using `__typeof' to using
		  `biting_pear_decltype'

		helper/postpreproc-2.lxx :
		- now rejects non-shortest UTF-8 character encodings