@@ -1,3 +1,8 @@
+2015-12-29	For great random.  (2)
+
+		include/biting-pear/srsly.h :
+		- simplified
+
 2015-12-28	For great random.
 
 		include/biting-pear/rly.h ,
